# tda_synaplex

./: README.md  pyproject.toml
article/: main.tex  references.bib
configs/: cifar10_shallow_500.yaml  fashion_mnist_deep_500.yaml  fashion_mnist_mlp_500.yaml  fashion_mnist_shallow_1000.yaml  fashion_mnist_shallow_200.yaml  fashion_mnist_shallow_2000.yaml  fashion_mnist_shallow_500.yaml  mnist_shallow_500.yaml
src/: main.py
src/experiment/: experiment.py  trainer.py
src/models/: cnn_fashion.py  mlp_swiss_roll.py
src/tda/: __init__.py  baselines.py  changepoint.py  topological_monitor.py
src/visualization/: plots.py
